fix(write page): fix write toggle not visible on smaller screens (#4696)

--- a/web/src/components/pages/contribution/sentence-collector/write/write-container.css
+++ b/web/src/components/pages/contribution/sentence-collector/write/write-container.css
@@ -63,6 +63,8 @@
 
     & .sc-toggle-wrapper {
         overflow-x: auto;
+        min-height: 50px;
+
         @media (width > 1400px) {
             width: 25%;
         }
